RESOLVED FIXED164368
WKWebView’s _observedRenderingProgressEvents not restored after web process crash
https://bugs.webkit.org/show_bug.cgi?id=164368
Summary WKWebView’s _observedRenderingProgressEvents not restored after web process c...
mitz
Reported 2016-11-03 10:18:05 PDT
After a web process crash, WebPageProxy doesn’t restore the observed layout milestones on the newly-created page.
Attachments
Include observed milestone in page creation parameters (15.21 KB, patch)
2016-11-03 12:17 PDT, mitz
andersca: review+
mitz
Comment 1 2016-11-03 10:25:08 PDT
mitz
Comment 2 2016-11-03 12:17:56 PDT
Created attachment 293785 [details] Include observed milestone in page creation parameters
mitz
Comment 3 2016-11-03 12:34:37 PDT
Note You need to log in before you can comment on or make changes to this bug.