WKWebView’s _observedRenderingProgressEvents not restored after web process crash https://bugs.webkit.org/show_bug.cgi?id=164368 <rdar://problem/29091954>

Reviewed by Anders Carlsson.

Source/WebKit2:

Test: TestWebKitAPI/Tests/WebKit2Cocoa/ObservedRenderingProgressEventsAfterCrash.mm.

* Shared/WebPageCreationParameters.cpp:
(WebKit::WebPageCreationParameters::encode): Encode new observedLayoutMilestones member.
(WebKit::WebPageCreationParameters::decode): Decode it.
* Shared/WebPageCreationParameters.h: Declared new observedLayoutMilestones member variable.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::WebPageProxy): Removed initializer for
  m_wantsSessionRestorationRenderTreeSizeThresholdEvent.
(WebKit::WebPageProxy::listenForLayoutMilestones): Update new m_observedLayoutMilestones
  member variable. Don’t update m_wantsSessionRestorationRenderTreeSizeThresholdEvent.
(WebKit::WebPageProxy::creationParameters): Set the observedLayoutMilestones member in the
  creation parameters.

* UIProcess/WebPageProxy.h: Declared new member variable, deleted
  m_wantsSessionRestorationRenderTreeSizeThresholdEvent declaration.

* UIProcess/ios/WebPageProxyIOS.mm:
(WebKit::WebPageProxy::didCommitLayerTree): Rather than using
  m_wantsSessionRestorationRenderTreeSizeThresholdEvent, use m_observedLayoutMilestones.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage): Add the observed layout milestones from the creation parameters.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit2Cocoa/ObservedRenderingProgressEventsAfterCrash.mm: Added.
(TEST):



Canonical link: https://commits.webkit.org/182091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208340 268f45cc-cd09-0410-ab3c-d52691b4dbfc